deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iloop-production
spec:
  selector:
    matchLabels:
      app: iloop
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: iloop
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iloop:master
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
        command: ["./runserver.sh"]
      - name: worker
        image: gcr.io/dd-decaf-cfbf6/iloop:master
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
        command: ["python3", "worker.py", "-l", "debug", "-A", "iloop.extensions.celery worker"]
      - name: redis
        image: redis:latest
        resources:
          requests:
            cpu: "10m"
            memory: "512Mi"
          limits:
            cpu: "100m"
        ports:
        - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter:latest
        ports:
        - containerPort: 9121
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            cpu: "100m"
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "100m"
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iloop-staging
spec:
  selector:
    matchLabels:
      app: iloop
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: iloop
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iloop:master
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
        command: ["./runserver.sh"]
      - name: worker
        image: gcr.io/dd-decaf-cfbf6/iloop:master
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
        command: ["python3", "worker.py", "-l", "debug", "-A", "iloop.extensions.celery worker"]
      - name: redis
        image: redis:latest
        resources:
          requests:
            cpu: "10m"
            memory: "512Mi"
          limits:
            cpu: "100m"
        ports:
        - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter:latest
        ports:
        - containerPort: 9121
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            cpu: "100m"
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "100m"
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
